Trying to fix session management to make sure a page refresh won't break the session and allows to join back in

--- a/src/app.scss
+++ b/src/app.scss
@@ -290,6 +290,7 @@ input[type="checkbox"] {
   position: absolute;
   font-family: 'Montserrat';
   display: flex;
+  flex-direction: column;
   place-content: center;
   place-items: center;
   width: 80%;
